# ChangeLog for net-dialup/ueagle-atm
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/ueagle-atm/ChangeLog,v 1.7 2009/08/22 07:18:55 mrness Exp $

*ueagle-atm-1.1-r3 (22 Aug 2009)

  22 Aug 2009; Alin Năstac <mrness@gentoo.org> files/README,
  -ueagle-atm-1.1-r2.ebuild, +ueagle-atm-1.1-r3.ebuild:
  Migrate to EAPI 2. Cleanup dependencies. Update README with changes occured
  in baselayout-2.

  13 Jul 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  ueagle-atm-1.1-r2.ebuild:
  Use emake rather than make.

  15 Apr 2007; Alin Năstac <mrness@gentoo.org> -ueagle-atm-1.2.ebuild:
  Remove non-working version.

*ueagle-atm-1.2 (23 Sep 2006)

  23 Sep 2006; Alin Nastac <mrness@gentoo.org> files/README,
  ueagle-atm-1.1-r2.ebuild, +ueagle-atm-1.2.ebuild:
  Modify PPPoA chapter of the documentation (#144194). Stable on x86. Version
  bump.

*ueagle-atm-1.1-r2 (23 May 2006)

  23 May 2006; Alin Nastac <mrness@gentoo.org> files/README,
  -ueagle-atm-1.1-r1.ebuild, +ueagle-atm-1.1-r2.ebuild:
  Keep up with baselayout-1.12.0 development. Improve post-install messages,
  based on new features available in linux-info.eclass.

*ueagle-atm-1.1-r1 (01 May 2006)

  01 May 2006; Alin Nastac <mrness@gentoo.org> -ueagle-atm-1.1.ebuild,
  +ueagle-atm-1.1-r1.ebuild:
  Set world-readable permissions on firmware files. Apparently, firmware
  loader fails with ENOENT if only root could read these files (#131693).

*ueagle-atm-1.1 (30 Apr 2006)

  30 Apr 2006; Alin Nastac <mrness@gentoo.org> +files/README, +metadata.xml,
  +ueagle-atm-1.1.ebuild:
  Initial version, created for fixing bug #131693.
