@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/ueagle-atm/ueagle-atm-1.1-r3.ebuild,v 1.1 2009/08/22 07:18:55 mrness Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/ueagle-atm/ueagle-atm-1.1-r3.ebuild,v 1.2 2011/06/15 21:49:10 flameeyes Exp $
 
 EAPI="2"
 
@@ -16,7 +16,8 @@ KEYWORDS="~amd64 x86"
 IUSE=""
 
 DEPEND=""
-RDEPEND="net-dialup/ppp"
+RDEPEND="net-dialup/ppp
+	!sys-kernel/linux-firmware"
 
 S="${WORKDIR}/ueagle-data-src-${PV}"
 
