@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/ueagle4-atm
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/ueagle4-atm/ChangeLog,v 1.1 2009/08/22 06:56:12 mrness Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/ueagle4-atm/ChangeLog,v 1.2 2011/06/15 21:50:44 flameeyes Exp $
+
+  15 Jun 2011; Diego E. Pettenò <flameeyes@gentoo.org> ueagle4-atm-1.0.ebuild:
+  Block linux-firmware.
 
   22 Aug 2009; Alin Năstac <mrness@gentoo.org> ChangeLog:
   Initial import from bug 278265, thanks to Rafal Lalik <rafallalik@gmail.com>.
