@@ -1,6 +1,10 @@
 # ChangeLog for net-dialup/ueagle-atm
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/ueagle-atm/ChangeLog,v 1.7 2009/08/22 07:18:55 mrness Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/ueagle-atm/ChangeLog,v 1.8 2011/06/15 21:49:10 flameeyes Exp $
+
+  15 Jun 2011; Diego E. Pettenò <flameeyes@gentoo.org>
+  ueagle-atm-1.1-r3.ebuild:
+  Block linux-firmware.
 
 *ueagle-atm-1.1-r3 (22 Aug 2009)
 
